[gd_scene load_steps=18 format=2]

[ext_resource path="res://objects/weapons/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://arts/temp/glowing_circle.png" type="Texture" id=2]
[ext_resource path="res://arts/shaders/Laser.png" type="Texture" id=3]

[sub_resource type="VisualShaderNodeInput" id=15]
input_name = "color"

[sub_resource type="VisualShaderNodeTexture" id=5]
texture = ExtResource( 3 )

[sub_resource type="VisualShaderNodeInput" id=6]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorDecompose" id=7]

[sub_resource type="VisualShaderNodeVectorCompose" id=8]

[sub_resource type="VisualShaderNodeInput" id=9]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarOp" id=10]
default_input_values = [ 0, 0.0, 1, -1.0 ]
operator = 2

[sub_resource type="VisualShaderNodeScalarOp" id=11]

[sub_resource type="VisualShaderNodeScalarOp" id=14]
default_input_values = [ 0, 0.0, 1, 200.0 ]
operator = 2

[sub_resource type="VisualShader" id=12]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_2;



void vertex() {
// Output:0

}

void fragment() {
// Input:10
	vec3 n_out10p0 = COLOR.rgb;

// Input:3
	vec3 n_out3p0 = vec3(UV, 0.0);

// VectorDecompose:4
	float n_out4p0 = n_out3p0.x;
	float n_out4p1 = n_out3p0.y;
	float n_out4p2 = n_out3p0.z;

// ScalarOp:9
	float n_in9p1 = 200.00000;
	float n_out9p0 = n_out4p0 * n_in9p1;

// Input:6
	float n_out6p0 = TIME;

// ScalarOp:7
	float n_in7p1 = -1.00000;
	float n_out7p0 = n_out6p0 * n_in7p1;

// ScalarOp:8
	float n_out8p0 = n_out9p0 + n_out7p0;

// VectorCompose:5
	float n_in5p2 = 0.00000;
	vec3 n_out5p0 = vec3(n_out8p0, n_out4p1, n_in5p2);

// Texture:2
	vec4 tex_frg_2_read = texture(tex_frg_2, n_out5p0.xy);
	vec3 n_out2p0 = tex_frg_2_read.rgb;
	float n_out2p1 = tex_frg_2_read.a;

// Output:0
	COLOR.rgb = n_out10p0;
	COLOR.a = n_out2p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -580.199, 5.75764 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 5 )
nodes/fragment/2/position = Vector2( -20, 100 )
nodes/fragment/3/node = SubResource( 6 )
nodes/fragment/3/position = Vector2( -1260, 180 )
nodes/fragment/4/node = SubResource( 7 )
nodes/fragment/4/position = Vector2( -1080, 180 )
nodes/fragment/5/node = SubResource( 8 )
nodes/fragment/5/position = Vector2( -300, 180 )
nodes/fragment/6/node = SubResource( 9 )
nodes/fragment/6/position = Vector2( -900, 400 )
nodes/fragment/7/node = SubResource( 10 )
nodes/fragment/7/position = Vector2( -680, 380 )
nodes/fragment/8/node = SubResource( 11 )
nodes/fragment/8/position = Vector2( -500, 300 )
nodes/fragment/9/node = SubResource( 14 )
nodes/fragment/9/position = Vector2( -760, 140 )
nodes/fragment/10/node = SubResource( 15 )
nodes/fragment/10/position = Vector2( 160, 40 )
nodes/fragment/connections = PoolIntArray( 2, 1, 0, 1, 3, 0, 4, 0, 5, 0, 2, 0, 6, 0, 7, 0, 7, 0, 8, 1, 4, 0, 9, 0, 9, 0, 8, 0, 4, 1, 5, 1, 8, 0, 5, 0, 10, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.991273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.000281572 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.832117, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="CanvasItemMaterial" id=4]

[node name="LaserBeam" type="RayCast2D"]
light_mask = 3
position = Vector2( 166, 274 )
cast_to = Vector2( 2000, 0 )
collision_mask = 3
collide_with_areas = true
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
material = SubResource( 13 )
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 0.952941, 0.223529, 0.223529, 1 )
texture = ExtResource( 3 )
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticle2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
scale_amount = 0.7
scale_amount_curve = SubResource( 2 )
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 3 )

[node name="CollisionParticle2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
scale_amount = 0.7
scale_amount_curve = SubResource( 2 )
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 3 )

[node name="BeamParticle2D" type="CPUParticles2D" parent="."]
material = SubResource( 4 )
emitting = false
lifetime = 0.3
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
tangential_accel = 100.0
scale_amount = 0.7
scale_amount_curve = SubResource( 2 )
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 3 )
